--- a/about.html
+++ b/about.html
@@ -34,7 +34,6 @@
     <div class="loader_bg">
         <div class="loader"><img src="images/loading.gif" alt="" /></div>
     </div>
-yatusabe
     <div class="wrapper">
         <!-- end loader -->
 
@@ -93,7 +92,7 @@ yatusabe
                                     <li class="dinone"><img style="margin-right: 15px;" src="images/mail_icon.png" alt="#"><a href="#">ShearStyle@gmail.com</a></li>
 
                                    
-                                    <li class="button_user"> <a class="button" href="#">Iniciar Sesión</a></li>
+                                    <li class="button_user"> <a class="button" href="login.html">Iniciar Sesión</a></li>
 
                                     <li>
                                         <button type="button" id="sidebarCollapse">
