--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                                     <li class="dinone"><img style="margin-right: 15px;" src="images/mail_icon.png" alt="#"><a href="#">ShearStyle@gmail.com</a></li>
 
                                    
-                                    <li class="button_user"> <a class="button" href="#">Iniciar Sesión</a></li>
+                                    <li class="button_user"> <a class="button" href="login.html">Iniciar Sesión</a></li>
 
                                     <li>
                                         <button type="button" id="sidebarCollapse">
@@ -112,7 +112,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="title">
-                                <h2>Contact</h2>
+                                <h2>Tú eliges cuándo</h2>
 
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                     <div class="row">
                         <div class=" col-md-12">
                             <div class="title">
-                                <h2>Request  A<strong class="white"> Call  Back</strong></h2>
+                                <h2>Solicita una<strong class="white"> Cita</strong></h2>
                             </div>
                         </div>
                     </div>
@@ -137,22 +137,31 @@
                                 <div class="row">
 
                                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                        <input class="form-control" placeholder="Your Name" type="text" name="Your Name">
+                                        <input class="form-control" placeholder="Fecha" type="date" name=" Fecha">
+                                    </div>
+
+                                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                        <input class="form-control" type="time" id="hora" name="hora">
+
                                     </div>
                                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                        <input class="form-control" placeholder="Phone Number" type="text" name="Email">
+                                        <label for="opciones"><h1 style="color:white">Selecciona una opción:<br></h1></label>
+                                            <select id="opciones" name="opciones"  style="width: 200px; background-color: #00aeef;border: #00aeef solid 2px;
+                                            border-radius: inherit;
+                                            margin-bottom: 25px;
+                                            padding: 12px 20px;
+                                            background: #00aeef;
+                                           color: #fff;
+                                            font-family: poppins; margin-left: 20px;">
+                                                <option value="opcion0">Selecciona</option>
+                                                <option value="opcion1">Opción 1</option>
+                                                <option value="opcion2">Opción 2</option>
+                                                <option value="opcion3">Opción 3</option>
+                                                <option value="opcion4">Opción 4</option>
+                                            </select>
                                     </div>
                                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                        <input class="form-control" placeholder="Email" type="text" name=" Email">
-                                    </div>
-                                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                        <input class="form-control" placeholder="Date" type="date" name=" Date">
-                                    </div>
-                                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                        <textarea class="textarea" placeholder="Message" type="text" name="Message"></textarea>
-                                    </div>
-                                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                        <button class="send">Send</button>
+                                        <button class="send">Confirmar</button>
                                     </div>
                                 </div>
                             </form>
